--- a/assets/styles/Navbar.css
+++ b/assets/styles/Navbar.css
@@ -23,9 +23,8 @@ header{
     box-shadow: 0 5px 8px rgb(0, 0, 0, .2);
 }
 
-.logo img{
-    width: 1rem;
-    color: var(--grisClaro);
+.logo-navbar{
+    width: 5rem;
 }
 
 header .nav-bar a{
@@ -37,87 +36,8 @@ header .nav-bar a{
 }
 
 header .nav-bar a:hover{
-    color: var(--azulClaro);
-    border-bottom: 4px solid var(--azulClaro);
+    border-bottom: 4px solid var(--blanco);
     transition: .5s ease all;
 }
 
-header input{
-    display: none;
-}
 
-header label{
-    font-size: 4rem;
-    color: var(--grisClaro);
-    cursor: pointer;
-    visibility: hidden;
-    opacity: 0;
-}
-
-@media(max-width:768px){
-
-    /* BARRA DE NAVEGACION */
-
-    header label{
-        visibility: visible;
-        opacity: 1;
-    }
-
-    header .nav-bar{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        background-color:rgb(0, 0, 0, .7);
-        padding: 1rem 2rem;
-        padding-top: 9rem;
-        border-top: .1rem solid rgb(0, 0, 0, .2);
-
-        transform-origin: top;
-        transform: scaleY(0);
-        transition: .2s linear;
-        z-index: 10;
-    }
-
-    header .trans-bar{
-        position: relative;
-        z-index: 20;   
-    }
-
-    header .logo{
-        position: relative;
-        z-index: 20; 
-    }
-
-    header .nav-bar a{
-        display: block;
-        margin: 2rem 7vw;
-        font-size: 3rem;
-        padding: .8rem;
-    }
-
-    header .nav-bar a:hover{
-        color: var(--azulClaro);
-        background-color: rgb(0, 0, 0, .2);
-        border-bottom: none;
-        padding-left: 1.3rem;
-        border-left: 3px solid var(--azulClaro);
-        transition: all .2s ease;
-    }
-
-    header input:checked ~ .nav-bar{
-        transform: scaleY(1);
-        opacity: 1;
-    }
-
-    header input:checked ~ label::before{
-        content: '\f00d';
-    }
-
-}
-
-@media(max-width: 680px){
-    html{
-        font-size: 49%;
-    }
-}
