--- a/assets/styles/Login.css
+++ b/assets/styles/Login.css
@@ -1,27 +1,3 @@
-:root{
-    --azulPrincipal: #0367A6;
-    --azulSecundario: #03658C;
-    --azulClaro: #63A5BF;
-    --grisOscuro: #262624;
-    --grisClaro: #BFBFBF;
-    --blanco: #F2F2F2;
-}
-
-*{
-    box-sizing: border-box;
-}
-
-html{
-    scroll-behavior: smooth;
-
-}
-
-body{
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    background-color: #f0f0f0;
-}
-
 .container-login{
     position: relative;
     width: 40rem;
@@ -38,6 +14,7 @@ body{
 }
 
 .container-logo{
+    background-color: var(--blanco);
     width: 20rem;
     height: 100%; 
     display: flex;
@@ -68,16 +45,19 @@ body{
     border: none;
 }
 
-.btn{
+.btn-ingresar{
     margin-top: 2rem;
+    background: none;
+    padding: .5rem 1rem;
     background-color: var(--azulPrincipal);
     color: var(--blanco);
     border: 2px solid var(--blanco);
+    border-radius: .5rem;
     font-weight: bolder;
     transition: all .8s ease;
 }
 
-.btn:hover{
+.btn-ingresar:hover{
     background-color: var(--blanco);
     color: var(--azulPrincipal);
     border: 2px solid var(--azulPrincipal);
@@ -110,7 +90,15 @@ body{
 @media (max-width: 915px) {
 
     .container-login{
-        margin-top: 22rem;
+        margin-top: 20rem;
+    }
+   
+}
+
+@media (max-width: 450px) {
+
+    .container-login{
+        margin-top: 13rem;
     }
    
 }
