Listo eliminar para todos los modulos y editar para asistencia y tipos. hay un problema en editar para personal

--- a/assets/styles/Sidebar.css
+++ b/assets/styles/Sidebar.css
@@ -1,5 +1,15 @@
 .container-sidebar{
     background-color: var(--azulPrincipal);
+    
+}
+
+.container-table{
+   overflow-y: scroll;
+   max-height: 52vh;
+}
+
+.observacion-asistencia{
+    background-color: cadetblue;
 }
 
 .img-sidebar-header{
